# CodexWokwi

./: CMakeLists.txt  README.md
docs/: architecture.md  wiring.md
src/: CMakeLists.txt
